more items aded

--- a/aw-tahliil/aw-tahliil site/index.html
+++ b/aw-tahliil/aw-tahliil site/index.html
@@ -116,7 +116,7 @@
     <section id="mainbody" class="product text-center my-5">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 my-2">
               <div class="single-product py-4">
                <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
                <h3>Folder Office</h3>
@@ -130,7 +130,7 @@
                            <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
               </div>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-4 my-2">
             <div class="single-product py-4">
              <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
              <h3>Folder Office</h3>
@@ -144,7 +144,133 @@
                          <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
             </div>
          </div>
-         <div class="col-md-4">
+         <div class="col-md-4 my-2">
+          <div class="single-product py-4">
+           <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+           <h3>Folder Office</h3>
+               <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+                   <h4>$400</h4>
+                   <small>
+                     <i class="fas fa-star"></i>
+                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                   </small>
+                       <br>
+                       <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+          </div>
+       </div>
+       <div class="col-md-4 my-2">
+        <div class="single-product py-4">
+         <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+         <h3>Folder Office</h3>
+             <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+                 <h4>$400</h4>
+                 <small>
+                   <i class="fas fa-star"></i>
+                       <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                 </small>
+                     <br>
+                     <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+        </div>
+     </div>
+     <div class="col-md-4 my-2">
+      <div class="single-product py-4">
+       <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+       <h3>Folder Office</h3>
+           <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+               <h4>$400</h4>
+               <small>
+                 <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+               </small>
+                   <br>
+                   <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+      </div>
+   </div>
+   <div class="col-md-4 my-2">
+    <div class="single-product py-4">
+     <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+     <h3>Folder Office</h3>
+         <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+             <h4>$400</h4>
+             <small>
+               <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+             </small>
+                 <br>
+                 <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+    </div>
+ </div>
+ <div class="col-md-4 my-2">
+  <div class="single-product py-4">
+   <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+   <h3>Folder Office</h3>
+       <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+           <h4>$400</h4>
+           <small>
+             <i class="fas fa-star"></i>
+                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+           </small>
+               <br>
+               <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+  </div>
+</div>
+<div class="col-md-4 my-2">
+<div class="single-product py-4">
+ <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+ <h3>Folder Office</h3>
+     <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+         <h4>$400</h4>
+         <small>
+           <i class="fas fa-star"></i>
+               <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+         </small>
+             <br>
+             <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+</div>
+</div>
+<div class="col-md-4 my-2">
+<div class="single-product py-4">
+<img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+<h3>Folder Office</h3>
+   <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+       <h4>$400</h4>
+       <small>
+         <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+       </small>
+           <br>
+           <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+</div>
+</div>
+            <div class="col-md-4 my-2">
+              <div class="single-product py-4">
+               <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+               <h3>Folder Office</h3>
+                   <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+                       <h4>$400</h4>
+                       <small>
+                         <i class="fas fa-star"></i>
+                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                       </small>
+                           <br>
+                           <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+              </div>
+           </div>
+           <div class="col-md-4 my-2">
+            <div class="single-product py-4">
+             <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
+             <h3>Folder Office</h3>
+                 <p>Lorem ipsum dolor sit amet consectetur  nostrum.</p>
+                     <h4>$400</h4>
+                     <small>
+                       <i class="fas fa-star"></i>
+                           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                     </small>
+                         <br>
+                         <button class="btn btn-small bg-info text-white" class="img-fluid" width="300px">Add To Cart</button>    
+            </div>
+         </div>
+         <div class="col-md-4 my-2">
           <div class="single-product py-4">
            <img src="images/things.jpg" alt="" class="img-fluid my-3" class="img-fluid" width="300px">
            <h3>Folder Office</h3>
