added footer section

--- a/aw-tahliil/aw-tahliil site/index.html
+++ b/aw-tahliil/aw-tahliil site/index.html
@@ -292,62 +292,68 @@
 
     <!----footer part of the wepsite-->
     <section id="footer">
-          <div class="footer-up">
-               <div class="container">
-                 <div class="row">
-                    <div class="col-md-4">
-                       <div class="footer-one">
-                         <h3 class="text-center"><span>AW-</span>Tahliil Stationary Company</h3>
-                            <div class="foot-sub">
-                              <div class="foot-inner">
-                                <h4 class="p-2">valuable links</h4>
-                                  <ul class="foot-ul">
-                                    <a href="#"><li class="foot-li">Home</li></a>
-                                    <a href="#"><li class="foot-li">About</li></a>
-                                    <a href="#"><li class="foot-li">Service</li></a>
-                                    <a href="#"><li class="foot-li">E-book</li></a>
-                                    <a href="#"><li class="foot-li">Contact</li></a>
-                                    <a href="#"><li class="foot-li">FAQ</li></a>
-                                  </ul>
-                              </div>
-                            </div>
-                            <div class="foot-sub-down">
-                              <p class="p-2">
-                                welcome to aw-tahliil stationary and computer accessories is for student and office workers to 
-                                to make their work easy and flexible.
-                              </p>
-                            </div>
-                       </div>
-                    </div>
-
-                    <!-- <div class="col-md-4 my-5">
-                      <div class="footer-one">
-                        <h3><span>QUICK</span>-LINKS</h3>
-                           <div class="foot-sub">
-                             <h4 class="p-2">valuable links</h4>
-                               <ul class="foot-ul">
-                                 <li class="foot-li">Home</li>
-                                 <li class="foot-li">Service</li>
-                                 <li class="foot-li">E-Book</li>
-                                 <li class="foot-li">About</li>
-                                 <li class="foot-li">OFFERS</li>
-                               </ul>
-                           </div>
-                           <div class="foot-sub-down">
-                             <p class="p-2">
-                               welcome to aw-tahliil stationary and computer accessories is for student and office workers to 
-                               to make their work easy and flexible.
-                             </p>
-                           </div>
-                      </div>
-                   </div> -->
-                    
-                 </div>
-               </div>
-          </div>
-        <div class="footer-down">
-               <h4 class="col-md-12 foot-down text-center">Designed by MHD <span class="fas fa-heart"></span> www.mohussein.com</h4>
-        </div>
+      <footer>
+        <div class="main-content">
+          <div class="left box">
+            <h2>
+  AW-TAHLIIL</h2>
+  <div class="content">
+              <p>
+                Aw-tahliil stationary is stationary based shop with lots of different 
+                service and utility. for more information please follow us on social media.
+              </p>
+  <div class="social">
+                <a href="https://facebook.com/coding.np"><span class="fab fa-facebook-f"></span></a>
+                <a href="#"><span class="fab fa-twitter"></span></a>
+                <a href="https://instagram.com/coding.np"><span class="fab fa-instagram"></span></a>
+                <a href="https://youtube.com/c/codingnepal"><span class="fab fa-youtube"></span></a>
+              </div>
+  </div>
+  </div>
+  <div class="center box">
+            <h2>
+  Address</h2>
+  <div class="content">
+              <div class="place">
+                <span class="fas fa-map-marker-alt"></span>
+                <span class="text">M.haybe district, Airport road, Jiic-Aboor Area.</span>
+              </div>
+  <div class="phone">
+                <span class="fas fa-phone"></span>
+                <span class="text">+252(63)-3463788</span>
+                <span class="text">+252(63)-4029671</span>
+              </div>
+  <div class="email">
+                <span class="fas fa-envelope"></span>
+                <span class="text">abc@example.com</span>
+              </div>
+  </div>
+  </div>
+  <div class="right box">
+            <h2>
+  Contact us</h2>
+  <div class="content">
+              <form action="#">
+                <div class="email">
+                  <div class="text">
+  Email *</div>
+  <input type="email" required>
+                </div>
+  <div class="msg">
+                  <div class="text">
+  Message *</div>
+  <!-- NOTE: Due to more textarea tag I got an error. So I changed the textarea name to changeit. Please change that changeit name to textarea -->
+  <textarea id=".msgForm" rows="2" cols="25" required></textarea> <!-- replace this changeit name to textarea -->
+                
+                <br />
+  <div class="btn">
+  <button type="submit" style="width: 55px; border-radius: 5px;">Send</button>
+                </div>
+  <div class="bottom px-2" >
+  <center>
+            <span class="credit">Created By <a href="https://youtube.com/c/codingnepal">Mohamed Hussein</a> | </span>
+            <span class="far fa-copyright"></span> 2020 All rights reserved. 
+          </center>
     </section>
    
     <!----footer part of the wepsite-->
