--- a/aw-tahliil/aw-tahliil site/index.html
+++ b/aw-tahliil/aw-tahliil site/index.html
@@ -70,6 +70,7 @@
     <!--header section-->
 
     <!---slide show part-->
+    
     <!-- <section id="slide-show">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -303,10 +304,10 @@
                 service and utility. for more information please follow us on social media.
               </p>
   <div class="social">
-                <a href="https://facebook.com/coding.np"><span class="fab fa-facebook-f"></span></a>
+                <a href="https://www.facebook.com/mo.hussein771"><span class="fab fa-facebook-f"></span></a>
                 <a href="#"><span class="fab fa-twitter"></span></a>
-                <a href="https://instagram.com/coding.np"><span class="fab fa-instagram"></span></a>
-                <a href="https://youtube.com/c/codingnepal"><span class="fab fa-youtube"></span></a>
+                <a href="https://www.instagram.com/mohamed_hussein_daahir/"><span class="fab fa-instagram"></span></a>
+                <a href="#"><span class="fab fa-youtube"></span></a>
               </div>
   </div>
   </div>
